--- a/aboutme/wrr/styles/site-plan-rafting.css
+++ b/aboutme/wrr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Crimson text";
-  --paragraph-font: Lato, "Crimson text", "Source serif";
+  --paragraph-font: Lato, "Crimson text";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #02304;  /* headlines on a white background */ 
