--- a/classes/styles/styles.css
+++ b/classes/styles/styles.css
@@ -1,6 +1,4 @@
-body {
-    text-align: center;
-  }
+
   nav {
     background-color: steelblue;
     padding: 10px;
@@ -8,26 +6,44 @@ body {
   a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
   }
   h1 {
+    text-align:center;
     color: steelblue;
   }
   img {
-    width: 800px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     border: 4px solid steelblue;
   }
   p {
     padding: 10px;
+    width: 80%;
   }
-  footer {
+ nav, footer {
+  text-align: center;
     background-color: steelblue;
     color: white;
+    padding: 10px;
   }
   .main-para {
     font-size: 1.5em;
     line-height: 1.5em;
+    width: 80%;
+    margin: 50px auto;
+    text-align:center;
 }
 #active {
     background-color: white;
     color: steelblue;
+}
+footer p{
+  font-size: 20px;
+  margin: 20px auto;
+}
+a:hover {
+  background-color: white;
+  color: steelblue;
 }
