--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -26,33 +26,33 @@ body{
     background-color:#023047 ;
 }
 header{
-    background-color:#fb8500 ;
+    background-color:#023047 ;
 }
 nav a:hover{
     background-color: #8ecae6;
     color: #023047;
 }
 .home-title{
-    color:#023047 ;
+    color:aqua ;
 }
 h4{
-    color:black ;
+    color:aqua ;
 }
 .book,.join{
-    color:#023047 ;
+    color:#8ecae6 ;
     text-decoration: none;
 }
 .book:hover, .join:hover{
     color:#8ecae6 ;
 }
 .msg h2,.msg p{
-    color:#8ecae6 ;
+    color:aqua ;
 }
 footer{
-    color:#023047 ;
+    color:aqua ;
 }
 footer a{
-    color:#023047 ;
+    color:#fb8500 ;
     text-decoration: none;
 }
 footer a:hover{
@@ -60,6 +60,7 @@ footer a:hover{
 }
 .icon{
     width: 80px;
+    color: aqua;
 }
 .logo{
     width: 80px;
@@ -69,4 +70,7 @@ footer p{
 }
 footer p a:hover{
     text-decoration: underline;
+}
+.rapids-card{
+    color: aqua;
 }
