--- a/classes/styles/styles.css
+++ b/classes/styles/styles.css
@@ -2,15 +2,18 @@
   nav {
     background-color: steelblue;
     padding: 10px;
+    padding: 25px;
   }
   a {
     color: white;
     margin: 40px;
     font-size: 1.5em;
+    padding: 25px;
   }
   h1 {
     text-align:center;
     color: steelblue;
+    margin: 50px 0;
   }
   img {
     width: 80%;
@@ -42,8 +45,12 @@
 footer p{
   font-size: 20px;
   margin: 20px auto;
+  padding: 25px;
 }
 a:hover {
   background-color: white;
   color: steelblue;
+}
+body{
+  margin: 0;
 }
