--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -36,7 +36,7 @@ header{
     background-color:#023047 ;
 }
 nav a:hover{
-    background-color: #8ecae6;
+    background-color: #fb8500;
     color: #023047;
 }
 .home-title{
@@ -62,7 +62,7 @@ main section img{
 h2{
     color: aqua;
 }
-.book, .Join{
+.book,.Join{
     text-align: center;
     color:#fb8500 ;
     text-decoration: none;
@@ -70,13 +70,18 @@ h2{
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
+}.book{
+    text-align: center;
 }
 
-.Book:hover{
-    color: aqua ;
+.book:hover{
+    color: #023047;
+    background-color: #fb8500;
+    text-align: center;
 }
 .Join:hover{
-    color:aqua ;
+    color: #023047;
+    background-color: #fb8500;
     text-decoration: underline;
 }
 .msg h2{
@@ -107,7 +112,8 @@ footer a{
     text-decoration: none;
 }
 footer a:hover{
-    color:#8ecae6 ;
+    color:#023047 ;
+    background-color:#fb8500 ;
 }
 .icon{
     width: 80px;
