--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -118,6 +118,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 400px;
+  align-content: stretch;
   
 
 }
@@ -135,7 +136,7 @@
   grid-row: 1/2;
   display:flex;
   flex-direction: column;
-  justify-content: first baseline;
+  justify-content: stretch;
 
 } 
 .yellow4 {
@@ -146,6 +147,7 @@
   display:flex;
   flex-direction: column;
   padding: 0%;
+  justify-content: stretch;
 
 
 } 
@@ -156,6 +158,7 @@
   grid-row: 3/4;
   display:flex;
   flex-direction: column;
+  justify-content: stretch;
 
   
 } 
@@ -185,10 +188,10 @@
 } 
 .yellow5 {
   width: 100%; 
-  height: 100px; 
+  height: 100%; 
   background-color: gold; 
   flex-wrap: wrap;
-  flex-grow: 1;
+  flex-grow: 3;
 
 } 
 .blue5 {
