--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -204,39 +204,37 @@
 .content6 {
   /* This is the parent of the activity 6 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  position:relative
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
 }
 .red6 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
   grid-column: 1/3;
-  grid-row: 1/2;
-  z-index: 4;
-  position:absolute;
-  top: 50px;
-  left:100px;
-  
-  z-index: 4;
+  grid-row: 1/5;
+  z-index: 1;
 } 
 .green6 {
   width: 100px; 
   height: 100px; 
   background-color: green; 
-  grid-column: 1/2;
-  grid-row: 3/4;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  
   top: 100px;
   left:250px;
   z-index: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: gold;
-  z-index: 1; 
+  z-index: 3; 
   top: 200px;
-  left:250px;
+  left: 0px;
+  grid-column: 3/7;
+  grid-row: 5/7;
 } 
 .blue6 {
   width: 200px; 
@@ -245,6 +243,8 @@
   z-index: 1;
   top: 1000px;
   left:100px;
+  grid-column: 2/6;
+  grid-row: 2/6;
 } 
 
 
