--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,17 +5,37 @@
     margin: 0 auto;
     font-size: 22px;
 }
+nav {
+    display:flex;
+    justify-content: space-around;
+}
 nav a{
     text-align: center;
     color: aqua;
     text-decoration: none;
     padding: 35px;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row:1/3 ;
+    z-index: -1;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-msg h1{
     text-align: center;
 }
 #hero-msg h4{
     text-align: center;
+    color: white;
 }
 .button-box{
     text-align: center;
@@ -25,6 +45,8 @@ main section{
 }
 #background{
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
     background-color:#023047 ;
@@ -33,11 +55,20 @@ body{
     margin: 0;
 }
 header{
+    display:grid;
+    grid-template-columns: 150px auto;
     background-color:#023047 ;
 }
 nav a:hover{
     background-color: #fb8500;
     color: #023047;
+    border-radius: 1px;
+    height: 8px;
+    width: 5px;
+}
+#home-grid{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1gr ;
 }
 .home-title{
     color:aqua ;
@@ -45,16 +76,45 @@ nav a:hover{
     font-size: 2em;
     margin-top: 10px;
 }
-h4{
+h4, h1{
     color:aqua ;
+
 }
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
     color: aqua;
 }
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow:5px 5px 10px aqua ;
+
+}
+.card-img, .mountains {
+    width: 100%;
+}
 .card-img{
     border: 10px solid #fb8500 ;
     color: aqua;
+    border: 10px solid aqua ;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px aqua;
+}
+.card-img:hover{
+    opacity: 0.6;
+    transform:scale(1.1)
 }
 main section img{
     box-sizing: border-box;
@@ -85,26 +145,37 @@ h2{
     text-decoration: underline;
 }
 .msg h2{
-    color:aqua ;
+    color:#023047;
     font-family: "Lato";
     line-height: 1.5em;
 }
 #logo_link{
+    justify-self: center;
+    align-self: center;
     padding-top: 5px;
 }
 .msg{
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    padding: 35px;
+    box-shadow: 5px 5px 10px aqua;
+    background-color:#fb8500 ;
 }
 .msg p{
-    color:aqua ;
+    color:#023047 ;
     font-size: .8em;
     line-height: 1.5em;
     padding-bottom: 15px;
 }
 footer{
-    color:aqua ;
+    color:#023047 ;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fb8500;
 }
 footer a{
     text-align: center;
@@ -113,7 +184,7 @@ footer a{
 }
 footer a:hover{
     color:#023047 ;
-    background-color:#fb8500 ;
+    background-color:#023047
 }
 .icon{
     width: 80px;
@@ -131,3 +202,45 @@ footer p a:hover{
 footer .social img{
     padding: 15px;
 }
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
