--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -38,7 +38,6 @@
   /* This is the parent of the activity 2 boxes. */
   display: grid;
   grid-template-columns: 50px 50px 50px 50px 50px;
-  position: relative;
 }
 .red2 {
   width: 100px; 
@@ -118,7 +117,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 400px;
-  align-content: stretch;
+  
   
 
 }
@@ -126,39 +125,34 @@
   width: 100%; 
   height: 100%; 
   background-color: red; 
-  grid-column: 1/2;
+  grid-column: 1;
   grid-row: 1/4;
 } 
 .green4 {
   width: 100%; 
-  height: 120px; 
+  height: 100%; 
   background-color: green; 
-  grid-row: 1/2;
-  display:flex;
-  flex-direction: column;
-  justify-content: stretch;
+  grid-row: 1;
+  grid-column: 2;
+  
 
 } 
 .yellow4 {
   width: 100%; 
-  height: 100px; 
+  height: 100%; 
   background-color: gold; 
-  grid-row: 2/3;
-  display:flex;
-  flex-direction: column;
-  padding: 0%;
-  justify-content: stretch;
+  grid-row: 2;
+  grid-column: 2;
+  
 
 
 } 
 .blue4 {
   width: 100%; 
-  height: 100px; 
+  height: 100%; 
   background-color: blue; 
-  grid-row: 3/4;
-  display:flex;
-  flex-direction: column;
-  justify-content: stretch;
+  grid-row: 3;
+  grid-column: 2;
 
   
 } 
@@ -180,9 +174,6 @@
   height: 100px; 
   background-color: green; 
   float: left;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex-grow: 2;
 
 
 } 
@@ -190,8 +181,8 @@
   width: 100%; 
   height: 100%; 
   background-color: gold; 
-  flex-wrap: wrap;
-  flex-grow: 3;
+  
+  
 
 } 
 .blue5 {
@@ -208,41 +199,35 @@
   
 }
 .red6 {
-  width: 200px; 
-  height: 100px; 
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
-  grid-column: 1/3;
-  grid-row: 1/5;
+  grid-column: 1/5;
+  grid-row: 1/3;
   z-index: 1;
 } 
 .green6 {
   width: 200px; 
-  height: 100px; 
+  height: 200px; 
   background-color: green; 
   grid-column: 1/3;
   grid-row: 5/7;
   
-  top: 100px;
-  left:250px;
   z-index: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 400px; 
   background-color: gold;
   z-index: 3; 
-  top: 50px;
-  left: 0px;
-  grid-column: 3/7;
-  grid-row: 5/7;
+  grid-column: 5/7;
+  grid-row: 3/7;
 } 
 .blue6 {
-  width: 200px; 
-  height: 200px; 
+  width: 400px; 
+  height: 400px; 
   background-color: blue; 
-  z-index: 1;
-  top: 1000px;
-  left:0px;
+  z-index: 2;
   grid-column: 2/6;
   grid-row: 2/6;
 } 
