--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -66,7 +66,7 @@ nav a:hover{
     height: 8px;
     width: 5px;
 }
-#home-grid{
+.home-grid{
     display: grid;
     grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
 }
