--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -289,13 +289,13 @@ h1{
     float: left;
     grid-row: 5/7;
 }
-p1{
+p{
     align-items: center;
     color: aqua;
     font-size: 15px;
     display: inline;
 }
-p1:hover{
+p:hover{
     color: #fb8500;
     
 }
