--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,6 +7,7 @@
 }
 nav {
     display:flex;
+    position: relative;
     text-align: center;
     justify-content: space-around;
 }
@@ -303,4 +304,60 @@ p:hover{
 }
 .a, .b,.c{
     border-radius: 50%;
+}
+form{
+    margin: 0 auto;
+    width: 800px;
+    padding: 1em;
+    border: 1px solid #fb8500 ;
+    border-radius: 1em;
+    
+}
+#names{
+    color: #fb8500;
+    display: inline-block;\
+}
+#web{
+    
+    color: #fb8500;
+    width: 50em;
+    
+}
+#interest{
+    color: #fb8500;
+    padding-top: 0.3em;
+}
+label{
+    display: inline-block;
+    width: 90px;
+}
+input,textarea{
+    width: 300px;
+    box-sizing: border-box;
+
+}
+textarea{
+    vertical-align: top;
+    height: 5em;
+    width: 50em;
+}
+.button{
+    padding-left: 95px;
+
+}
+}
+button{
+    margin-left: 0.5em;
+    
+    
+}
+
+#feedback{
+    background-color: #fb8500;
+    position: absolute;
+    
+    display: none;/*making element invisible*/
+}
+.moveDown{
+    margin-top: 3em;
 }
