--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -315,7 +315,7 @@ form{
 }
 #names{
     color: #fb8500;
-    display: inline-block;\
+    display: inline-block;
 }
 #web{
     
@@ -345,7 +345,7 @@ textarea{
     padding-left: 95px;
 
 }
-}
+
 button{
     margin-left: 0.5em;
     
