--- a/portfolio2/portfolio1/styles/styles.css
+++ b/portfolio2/portfolio1/styles/styles.css
@@ -116,7 +116,7 @@ footer{
     display: flex;
     justify-content: space-around;
     background-color: black;
-    position:fixed;
+    position: fixed;
     height: 80px;
     width: 100%;
     bottom:0;
@@ -136,13 +136,12 @@ footer a:hover, footera:active{
 }
 
 .background{
-    background-image: url("C:/Users/James Abraham/Downloads/wdd130/portfolio2/portfolio1/images/home1.png");
     background-position: center;
     opacity: 2;
     background-size: cover;
     background-repeat:no-repeat;
     z-index: -1;
-    height: 100vh;
+    height: 100%;
     min-width: 100%;
 }
 #hook{
