--- a/portfolio2/portfolio1/styles/styles.css
+++ b/portfolio2/portfolio1/styles/styles.css
@@ -15,9 +15,15 @@ body {
 
 /* Header styles */
 header {
-  padding: 20px;
-  display: grid;
-  position: static;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px;
+  display: flex;
+  align-items: center;
+
 }
 .topic{
   color: #e5e5e5;
@@ -34,9 +40,14 @@ header {
 }
 
 #content {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
+  top:0;
+  left: 0;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 
@@ -45,28 +56,40 @@ header {
   align-items: center;
   text-decoration: none;
   color: #de8a02;
+  position: fixed;
+}
+#logo_link {
+  padding-left: 5px;
+  padding-top: 5px;
 }
 
-#logo_link img {
+nav img {
+  position: fixed;
   margin-right: 8px;
+  top:2px;
+  z-index: 2;
 }
 
 nav {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px;
+  
 }
 
 nav a {
   font-size: x-large;
   text-decoration: none;
   color: #de8a02;
-  padding: 30px;
+  padding: 14px 16px;
   padding-right: 30px;
-  margin-left: 20px;
-  text-transform: uppercase;
   justify-content: space-between;
-  text-decoration: underline;
+  text-decoration: none;
+  border-radius: 20px;
+  grid-row: 4/6;
+
 }
 #snitch h2{
   color: #de8a02;
@@ -87,10 +110,62 @@ nav a {
 .topic{
   color: #e5e5e5;
 }
-nav a:hover,
-nav a.active {
-  color: white;
+nav a:hover {
+  background-color: white;
+  color: black;
 }
+nav a:active{
+  color: black;
+  background-color: #de8a02;
+}
+.fine{
+  padding-left: 10px;
+  text-align: left;
+  padding-inline-start: 10px;
+
+}
+#bod {
+  display: grid;
+  grid-template-columns: 1fr 3fr; /* Two equal columns */
+  grid-gap: 20px; /* Gap between the columns */
+  padding-top: 130px;
+  
+}
+.more{
+  color: #de8a02;
+}
+p{
+  color: white;
+  margin-bottom: 20px;
+  padding:10px;
+}
+.fine p:hover{
+  color: #e5e5e5;
+  background-color: black;
+}
+.fine h1{
+  color: #de8a02;
+}
+
+#background {
+  grid-column: 1 / span 2; /* The background image spans both columns */
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 280px 1fr; /* Left column for the image, right column for the text */
+  grid-gap: 10px; /* Gap between the image and text */
+}
+
+#single {
+  grid-column: 1; /* The image occupies the left column */
+}
+
+.fine {
+  grid-column: 2; /* The text occupies the right column */
+  grid-row: 1/2;
+}
+
 
 /* Main section styles */
 .services {
@@ -115,16 +190,23 @@ nav a.active {
 #hook p{
   color: #e5e5e5;
 }
+#single{
+  padding-left: 10px;
+}
 
 #hook {
   color: #de8a02;
-  padding: 40px;
+  padding-top: 120px;
+  
 }
 h4{
   color: #e5e5e5;
 }
 #snitch p{
   font: 100;
+}
+#services{
+  padding-top: 0px;
 }
 .service-item {
   display: inline-block;
@@ -143,6 +225,8 @@ h4{
 
 /* Footer styles */
 footer {
+  position: static;
+  padding-bottom: 0;
   background-color: black;
   color: #de8a02;
   padding: 20px;
@@ -166,6 +250,9 @@ footer a:hover{
   display: inline-block;
   width: 30px;
   margin: 0 5px;
+}
+#social{
+  float: right;
 }
 
 /* Responsive styles */
@@ -191,3 +278,40 @@ footer a:hover{
     text-align: center;
   }
 }
+.dropbtn {
+  background-color: #de8a02;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  z-index: -2;
+}
+
+.dropdown {
+  position: fixed;
+  display: inline-block;
+  padding-top: 120px;
+
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #e5e5e5;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #de8a02;
+  padding: 12px 12px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: black;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #de8a02;}
