--- a/portfolio2/portfolio1/styles/styles.css
+++ b/portfolio2/portfolio1/styles/styles.css
@@ -343,3 +343,58 @@ footer a:hover{
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #de8a02;}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #de8a02;
+}
+
+input,
+textarea {
+  width: 80%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+textarea {
+  resize: vertical;
+}
+form{
+  padding-top: 90px;
+}
+
+button {
+  background-color: white;
+  color: black;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: black;
+  color: #de8a02;
+  font-weight: bold;
+}
+
+
+/* Add some responsiveness for smaller screens */
+@media screen and (max-width: 480px) {
+  body {
+      padding: 10px;
+  }
+
+  input,
+  textarea {
+      padding: 8px;
+  }
+
+  button {
+      padding: 8px 12px;
+  }
+}
